--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ input{
     flex-wrap: wrap;
 }
 .two{
-border-image-source: url(images/teddy.png);
+
 rotate: -5deg;
 }
 .one{
@@ -95,4 +95,10 @@ rotate: -5deg;
 }
 .three{
     rotate: 5deg;
+}
+@media only screen and (max-width: 767px) {
+    .div1{
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
