--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ p{
     margin-left: auto;
     margin-right: auto;
     margin-top: 45px;
+    position: relative;
+      z-index: 2;
 }
 #div2{
     display: flex;
@@ -79,6 +81,8 @@ border-image-width: 15px;
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
+    position: relative;
+      z-index: 1;
 }
 .two{
 
