--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ button{
     border-radius: 5px;
     width: 70px;
     font-weight: bold;
+    cursor: pointer;
     height: 30px;
 }
 #yesbtn:hover{
