--- a/style.css
+++ b/style.css
@@ -97,3 +97,15 @@ rotate: -5deg;
     rotate: 5deg;
     background-color: burlywood;
 }
+footer{
+    width: 100%;
+    height: 30px;
+    background-color: red;
+
+}
+
+.footer-text{
+    text-align: center;
+    color: bisque;
+    margin-top: 10px;
+}
