--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ rotate: -5deg;
     rotate: 5deg;
     background-color: burlywood;
 }
-footer{
+nav{
     width: 100%;
     height: 30px;
     background-color: red;
@@ -107,5 +107,5 @@ footer{
 .footer-text{
     text-align: center;
     color: bisque;
-    margin-top: 10px;
+    margin: 0;
 }
